feature(backend): create method close-position-list by portfolio id